# cloud-etl

./: .gitignore  Makefile  README.md  alembic.ini  cloud-etl.postman_collection.json  docker-compose.yaml  pyproject.toml
app/: main.py
app/src/api/: contexvars.py
app/src/api/handlers/auth/: __init__.py  login.py  register.py
app/src/api/handlers/rates/: __init__.py  get_by_date.py  trigger_collect_rates.py
app/src/api/middlewares/: __init__.py  auth.py  session.py
app/src/api/urls/: __init__.py  auth.py  rates.py
app/src/core/: __init__.py  constants.py  settings_.py
app/src/database/: core.py
app/src/database/migrations/: env.py
app/src/database/migrations/versions/: 2022_11_17_1423-954855a617a9_.py
app/src/database/models/: __init__.py  base.py  exchange_rates.py  user.py
app/src/database/repositories/: __init__.py  base.py  rates.py  users.py
app/src/exceptions/handlers/: __init__.py
app/src/schema/enum/: __init__.py  rate_codes_enum.py
app/src/schema/payloads/: base.py
app/src/schema/payloads/users/: __init__.py  login.py  register.py
app/src/schema/responses/: __init__.py  base.py  rates.py
app/src/schema/responses/users/: __init__.py  login.py  user_info.py
app/src/services/: auth.py
app/src/services/database/: __init__.py  users.py
env/: .compose.env  .env.template
functions/collect_rates/: main.py  requirements.txt
functions/collect_rates/src/: constants.py  environment.py  parser.py  repository.py  schema.py  validator.py
system/: Dockerfile  start-server
